--- a/src/app/app.module.scss
+++ b/src/app/app.module.scss
@@ -1,36 +1,42 @@
 @import './index';
 
 .app {
-width: 100%;
+  width: 100%;
 }
 
 .container {
   display: grid;
-  grid-template-columns: 1fr;
   max-width: 100%;
   height: 100vh;
   overflow: hidden;
-
 }
 
 .left-panel {
-  background-color: #F07DEA;
+  width: 100%;
   height: 100vh;
+  background-color: #009FBD;
+}
+
+.main {
+  @include element-position($position: fixed, $left: 100%);
+  background-color: #8F43EE;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  transition: transform 0.2s ease-out;
+  transform: translateX(100%);
 
   &--active {
-    display: none;
+    transform: translateX(-100%);
   }
 }
 
-.main{
-  position: fixed;
-  background-color: #F8CB2E;
-  top: 0;
-  right: 0;
-  bottom: 0;
+.right-panel {
+  @include element-position($position: fixed, $top: 0, $bottom: 0, $right: 0);
+  background-color: #E96479;
   width: 100%;
-  z-index: 999;
-  transition: transform 0.5s ease-out;
+  z-index: 11;
+  transition: transform 0.2s ease-out;
   transform: translateX(100%);
 
   &--active {
@@ -40,37 +46,44 @@ width: 100%;
 
 @include respond-to(tablet) {
   .container {
-    grid-template-columns: 350px 1fr 0;
-    overflow: hidden;
-  }
-
-  .main {
-    display: block;
-    grid-column: 2 / 3;
-    background-color: #3CCF4E;
-    height: 100vh;
-    width: 100%;
-
-    position: static;
-    top: auto;
-    right: auto;
-    bottom: auto;
-    z-index: 0;
-    transition: none;
-    transform: none;
+    display: grid;
+    grid-template-columns: 350px 1fr auto;
   }
 
   .left-panel {
     display: block;
-    background-color: #F07DEA;
+    grid-column: 1 / 2;
     height: 100vh;
   }
 
-  .right-panel {
-    grid-column: 3 / 4;
-    width: 400px;
-    background-color: #31E1F7;
+  .main {
+    @include element-position($position: static);
+    display: block;
+    grid-column: 2 / 3;
+    background-color: green;
+    height: 100vh;
+    width: 100%;
+    z-index: 0;
+    transition: none;
+    transform: none;
 
+    &--active {
+      margin-right: 0;
+    }
+  }
+
+  .right-panel {
+    background-color: white;
+    grid-column: 3 / 4;
+    position: fixed;
+    top: 0;
+    right: -400px;
+    width: 100%;
+    transition: all 0.3s ease;
+
+    &--active {
+      right: 0;
+    }
   }
 }
 
