--- a/src/app/app.module.scss
+++ b/src/app/app.module.scss
@@ -9,22 +9,20 @@
   max-width: 100%;
   height: 100vh;
   overflow: hidden;
+  position: relative;
 }
 
 .left-panel {
-  width: 100%;
-  height: 100vh;
   background-color: #009FBD;
+  grid-column: 1 ;
 }
 
 .main {
   @include element-position($position: fixed, $left: 100%);
   background-color: #8F43EE;
   width: 100%;
-  height: 100vh;
-  z-index: 10;
-  transition: transform 0.2s ease-out;
-  transform: translateX(100%);
+  height: 100%;
+  transition: transform 0.5s ease-out;
 
   &--active {
     transform: translateX(-100%);
@@ -35,8 +33,7 @@
   @include element-position($position: fixed, $top: 0, $bottom: 0, $right: 0);
   background-color: #E96479;
   width: 100%;
-  z-index: 11;
-  transition: transform 0.2s ease-out;
+  transition: transform 0.5s ease-out;
   transform: translateX(100%);
 
   &--active {
@@ -44,53 +41,45 @@
   }
 }
 
-@include respond-to(tablet) {
+@include respond-to("tablet") {
   .container {
     display: grid;
-    grid-template-columns: 350px 1fr auto;
-  }
-
-  .left-panel {
-    display: block;
-    grid-column: 1 / 2;
-    height: 100vh;
+    grid-template-columns: 350px  1fr;
   }
 
   .main {
     @include element-position($position: static);
-    display: block;
-    grid-column: 2 / 3;
-    background-color: green;
-    height: 100vh;
+    grid-column: 2 / -1;
     width: 100%;
-    z-index: 0;
-    transition: none;
-    transform: none;
 
     &--active {
-      margin-right: 0;
+      margin-left: -350px;
+      width: calc(100% + 350px);
+      transition: all 0.5s ease-in-out;
+      transform: none;
+    }
+
+    &--active + .left-panel {
+      width: 0;
+    }
+
+    &--close {
+      width: 100%;
+      transition: all 0.5s ease-in-out;
     }
   }
 
   .right-panel {
-    background-color: white;
-    grid-column: 3 / 4;
-    position: fixed;
-    top: 0;
-    right: -400px;
-    width: 100%;
-    transition: all 0.3s ease;
-
-    &--active {
-      right: 0;
-    }
+    background-color: crimson;
+    width: 400px;
   }
 }
 
-@include respond-to(desktop) {
-  .left-panel,
-  .right-panel {
-    width: 450px;
+@include respond-to("desktop") {
+
+  .main {
+    all: initial;
+    background-color: #8F43EE;
   }
 }
 
