add toggle component

--- a/src/app/styles/fonts.scss
+++ b/src/app/styles/fonts.scss
@@ -18,3 +18,24 @@
   font-weight: bold;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Inter';
+  src: url('src/shared/assets/fonts/Inter-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('src/shared/assets/fonts/Inter-Medium.ttf') format('truetype');
+  font-weight: 500; // Medium
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('src/shared/assets/fonts/Inter-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
