--- a/src/features/main-menu/main-menu.module.scss
+++ b/src/features/main-menu/main-menu.module.scss
@@ -23,38 +23,14 @@
   }
 
   &__list {
-    @include element-position($top: 3rem, $left: .5rem);
-    display: inline-flex;
-    flex-direction: column;
-    row-gap: 6px;
-    min-width: 17rem;
-    max-height: calc(100 * var(--vh) - 3.75rem);
-    list-style: none;
-    border-radius: 6px;
-    background-color: var(--color-background-compact-menu);
-    backdrop-filter: blur(10px);
-    z-index: 1;
-    padding: 0.25rem 0;
-    -webkit-box-shadow: 0 18px 55px -15px rgba(0, 0, 0, 0.26);
-    -moz-box-shadow: 0 18px 55px -15px rgba(0, 0, 0, 0.26);
-    box-shadow: 0 18px 55px -15px rgba(0, 0, 0, 0.26);
+    position: absolute;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out;
 
     &--open {
       opacity: 1;
     }
   }
 
-  &__item {
-    font-size: .875rem;
-    padding: 0.25rem;
-    border-radius: 0.375rem;
-    width: auto;
-    font-weight: 500;
-    transform: scale(1);
-    transition: .15s ease-in-out transform;
-  }
 }
 
 
@@ -101,15 +77,4 @@
   }
 }
 
-
-//@keyframes scale-down-tl {
-//  0% {
-//    transform: scale(1);
-//    transform-origin: 0% 0%;
-//  }
-//  100% {
-//    transform: scale(0);
-//    transform-origin: 0% 0%;
-//  }
-//}
 
