--- a/src/features/main-menu/main-menu.module.scss
+++ b/src/features/main-menu/main-menu.module.scss
@@ -15,6 +15,7 @@
     svg {
       width: 100%;
       height: 100%;
+      stroke: var(--color-icon-primary);
     }
 
     &--pressed {
@@ -24,13 +25,18 @@
 
   &__list {
     position: absolute;
+    top: 55px;
+    left: 5px;
     opacity: 0;
+    z-index: -100;
+
 
     &--open {
       opacity: 1;
+      z-index: 0;
+      transition: opacity .2s cubic-bezier(0.2, 0, 0.2, 1),transform .2s cubic-bezier(0.2, 0, 0.2, 1);
     }
   }
-
 }
 
 
