--- a/src/shared/ui/dropdown/dropdown.module.scss
+++ b/src/shared/ui/dropdown/dropdown.module.scss
@@ -3,36 +3,46 @@
   width: 18rem;
   display: flex;
   flex-direction: column;
-  row-gap: 4px;
+  row-gap: 0.30em;
   padding: 0.5em;
   list-style: none;
   border-radius: 6px;
-  background-color: rgba(255, 255, 255, 0.75);
+  background-color: var(--color-primary-opacity);
   backdrop-filter: blur(10px);
+  box-shadow: 0 0 67px -14px rgba(34, 60, 80, 0.2);
 
   &__item {
     display: flex;
     align-items: center;
+    padding: 0.25em;
 
     &:hover {
       cursor: pointer;
-      background-color: #cecece;
+      background-color: var(--color-background-compact-menu-hover);
       border-radius: 4px;
     }
   }
 
   &__title {
     width: 100%;
-    padding-left: .5em;
+    padding-left: 1em;
     font-size: .9em;
     font-weight: 400;
+    color: var(--color-primary-font);
+  }
 
-
+  &__icon {
+    width: 1.3em;
+    height: 16px;
+    svg {
+      width: 100%;
+      height: 100%;
+      stroke: var(--color-icon-primary)
+    }
   }
 
   &__control {
-
-    width: 40px;
+    min-width: 35px;
     height: 18px;
   }
 }
