--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -4,7 +4,7 @@
   --color-primary-opacity: rgba(255,255,255, 0.75);
   --color-search-input-bg: #f4f4f5;
   --color-chat-input-bg: #ffffff;
-  --color-chat-bg: #2e2e2e;
+  --color-chat-bg: #f4f4f5;
   --color-chat-hover: #f4f4f5;
   --color-chat-selected: #3390ec;
   --color-chat-selected-font: #ffffff;
@@ -31,7 +31,7 @@
   --color-primary-opacity: rgba(255,255,255, 0.75);
   --color-search-input-bg: #f4f4f5;
   --color-chat-input-bg: #ffffff;
-  --color-chat-bg: #2e2e2e;
+  --color-chat-bg: #f4f4f5;
   --color-chat-hover: #f4f4f5;
   --color-chat-selected: #3390ec;
   --color-chat-selected-font: #ffffff;
