--- a/src/app/styles/mixin.scss
+++ b/src/app/styles/mixin.scss
@@ -13,3 +13,18 @@
   right: $right;
   bottom: $bottom;
 }
+//
+
+@mixin chat-input-btn {
+  width: 1.5rem;
+  height: 1.5rem;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
+}
+
