--- a/src/pages/im/im.module.scss
+++ b/src/pages/im/im.module.scss
@@ -1,10 +1,7 @@
 @import 'src/app/index';
 
-.app {
+.im {
   width: 100%;
-}
-
-.container {
   display: grid;
   max-width: 100%;
   height: 100vh;
@@ -13,29 +10,32 @@
 }
 
 .left-panel {
-  grid-column: 1 ;
+  grid-column: 1;
   padding: 4px;
   background-color: var(--color-primary);
 
   &__header {
     display: flex;
     align-items: center;
-    -webkit-box-shadow: 0px 21px 46px -30px rgba(0,0,0,0.35);
-    -moz-box-shadow: 0px 21px 46px -30px rgba(0,0,0,0.35);
-    box-shadow: 0px 21px 46px -30px rgba(0,0,0,0.35);
+    -webkit-box-shadow: 0px 21px 46px -30px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: 0px 21px 46px -30px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 21px 46px -30px rgba(0, 0, 0, 0.35);
   }
 }
 
 .main {
   @include element-position($position: fixed, $left: 100%);
-  background-color: #8F43EE;
+  background-color: var(--color-chat-bg);
   width: 100%;
-  height: 100%;
   transition: transform 0.5s ease-out;
   z-index: 1;
 
   &--active {
     transform: translateX(-100%);
+  }
+
+  &__header {
+    background-color: var(--color-primary);
   }
 }
 
@@ -53,7 +53,7 @@
 }
 
 @include respond-to("tablet") {
-  .container {
+  .im {
     display: grid;
     grid-template-columns: 400px  1fr;
   }
@@ -69,8 +69,8 @@
     width: 100%;
 
     &--active {
-      margin-left: -350px;
-      width: calc(100% + 350px);
+      margin-left: -400px;
+      width: calc(100% + 400px);
       transition: all 0.5s ease-in-out;
       transform: none;
     }
@@ -94,9 +94,16 @@
 @include respond-to("desktop") {
 
   .main {
-    all: initial;
-    background: url("src/shared/assets/wallpapers/wallhaven-z8ewmo.png");
-    background-size: auto 40%;
+    &--active {
+      margin-left: unset;
+      width: unset;
+    }
+
+    &--close {
+      transition: none;
+    }
+
+
   }
 }
 
