--- a/src/widgets/chat-info/chat-info.module.scss
+++ b/src/widgets/chat-info/chat-info.module.scss
@@ -1,14 +1,16 @@
-.active-dialog {
-  //display: flex;
-  //align-items: center;
-  //gap: 12px;
+.chat-info {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  padding: 0.375rem;
+  background: var(--color-primary);
 
   &__link {
     display: flex;
     align-items: center;
-    gap: 12px;
+    gap: 0.75rem;;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #707579
   }
 
@@ -16,11 +18,12 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    color: var(--color-secondary-font);
   }
 
   &__name {
     font-size: 16px;
     font-weight: 600;
-    color: #000000;
+    color: var(--color-primary-font);
   }
 }
