--- a/src/app/styles/mixin.scss
+++ b/src/app/styles/mixin.scss
@@ -13,7 +13,7 @@
   right: $right;
   bottom: $bottom;
 }
-//
+
 
 @mixin chat-input-btn {
   width: 1.5rem;
@@ -25,6 +25,7 @@
   svg {
     width: 100%;
     height: 100%;
+    fill: var(--color-icon-primary);
   }
 }
 
