--- a/src/widgets/message-box/ui/send-button/send-btutton.module.scss
+++ b/src/widgets/message-box/ui/send-button/send-btutton.module.scss
@@ -8,7 +8,7 @@
     width: 3.125rem;
     height: 3.125rem;
     border-radius: 50%;
-    border-color: transparent;
+   border: none;
     background-color: var(--color-chat-selected);
     margin-bottom: 0.3125rem;
 
@@ -23,13 +23,13 @@
 @include respond-to(desktop) {
   .send {
     &__btn {
+      border: solid 1px var(--color-primary);
       background-color: var(--color-primary);
       svg {
         stroke: var(--color-icon-primary);
       }
       &:hover {
         background-color: var(--color-chat-selected);
-
         svg {
           stroke: var(--color-primary);
         }
