--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,4 +1,4 @@
-@import "src/app/styles/index";
+@import "./styles/index";
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
