--- a/src/shared/ui/avatar/avatar.module.scss
+++ b/src/shared/ui/avatar/avatar.module.scss
@@ -3,7 +3,21 @@
   border-radius: 50%;
   width: 55px;
   height: 55px;
+
   &__img {
+    object-fit: cover;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__color {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: var(--color-primary-font);
     object-fit: cover;
     border-radius: 50%;
     width: 100%;
