--- a/src/entities/message/ui/message/message.module.scss
+++ b/src/entities/message/ui/message/message.module.scss
@@ -43,15 +43,28 @@
     }
   }
 
+  &__image {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    max-width: 250px;
+    max-height: 250px;
+  }
+
+  &__preview {
+    width: 100%;
+    height: 100%;
+
+  }
+
   &__text {
     grid-column: 1 / -1;
-    grid-row: 1 / 1;
+    grid-row: 2 / 3;
     margin: 0;
     font-size: 15px;
   }
 
   &__info {
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
     display: flex;
     column-gap: 5px;
     justify-self: end;
@@ -82,6 +95,10 @@
       }
     }
 
+    #{$this}__image {
+      transform: scaleX(-1);
+    }
+
     #{$this}__text, #{$this}__info {
       transform: scaleX(-1);
     }
@@ -99,6 +116,29 @@
       }
     }
   }
+}
+
+.modal__content {
+  display: flex;
+}
+
+.modal__close-button {
+  svg {
+    width: 35px;
+    height: 35px;
+  }
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.modal__image-container {
+  max-width: 100rem;
+}
+
+.modal__image {
+  width: 100%;
+  height: 100%;
 }
 
 @include respond-to(tablet) {
