--- a/src/components/chat/chat-info/chat-info.module.scss
+++ b/src/components/chat/chat-info/chat-info.module.scss
@@ -28,4 +28,21 @@
     font-weight: 600;
     color: var(--color-primary-font);
   }
+
+  &__typing {
+    display: flex;
+    justify-content: start;
+    width: 200px;
+    height: 22px;
+  }
+
+  &__typing-icon {
+    svg {
+      width: 100%;
+      height: 150%;
+      fill: var(--color-chat-selected);
+      stroke: var(--color-chat-selected);
+
+    }
+  }
 }
