--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,4 +1,4 @@
-@import "./styles/index";
+@import './styles/index';
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -33,7 +33,7 @@ body {
   font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  background-color: var(--color-chat-bg);
 }
 
 
