--- a/src/components/chat/modal-content/modal-content.module.scss
+++ b/src/components/chat/modal-content/modal-content.module.scss
@@ -1,11 +1,13 @@
 @import 'src/app/index';
 
 .content {
-  background-color: #fff;
-  padding: 20px;
+  $this: &;
+  padding: 10px;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  width: 450px;
+  width: 100%;
+  background-color: var(--color-primary);
+  color: var(--color-primary-font);
 
   &__header {
     display: flex;
@@ -15,24 +17,40 @@
 
   &__title {
     padding: 0 8px;
+
     p {
       font-size: 1.2rem;
       font-weight: bold;
     }
   }
 
+&__file {
+  &-name {
+   font-size: .70rem;
+  }
+
+  &-size {
+    font-size: .70rem;
+  }
+}
+
   &__close {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 40px;
     height: 40px;
+
     &-button {
+      margin-top: 5px;
       svg {
         width: 35px;
         height: 35px;
+        color: var(--color-icon-primary);
       }
     }
 
     &:hover {
-
       cursor: pointer;
       border-radius: 50%;
       background-color: var(--color-chat-hover);
@@ -60,6 +78,8 @@
     border: solid 1px var(--color-search-input-bg);
     border-radius: 3px;
     background-color: var(--color-search-input-bg);
+    color: var(--color-secondary-font);
+    font-size: 1rem;
 
     &:focus {
       outline-color: var(--color-chat-selected);
@@ -71,13 +91,21 @@
     padding: 10px 25px;
     border: none;
     font-size: 1rem;
-    color: var(--color-primary-font);
+    color: var(--color-primary);
     border-radius: 6px;
   }
 }
 
 
+@include respond-to("tablet") {
+  .content {
+    width: 400px;
+  }
+}
 
+@include respond-to("tablet") {
+
+}
 
 
 
