--- a/src/entities/message/ui/message/message.module.scss
+++ b/src/entities/message/ui/message/message.module.scss
@@ -47,7 +47,7 @@
     grid-column: 1 / -1;
     grid-row: 1 / 2;
     max-width: 250px;
-    max-height: 250px;
+    height: auto;
   }
 
   &__preview {
@@ -118,28 +118,38 @@
   }
 }
 
-.modal__content {
+.message-modal {
   display: flex;
-}
+  justify-content: center;
+  align-items: center;
 
-.modal__close-button {
-  svg {
-    width: 35px;
-    height: 35px;
+  &__content {
+    display: flex;
+    width: 100%;
+    height: 100%;
   }
-  &:hover {
-    cursor: pointer;
+
+  &__close-button {
+    svg {
+      width: 35px;
+      height: 35px;
+      stroke: var(--color-out-font);
+    }
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  &__image-container {
+    max-width: 100rem;
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
   }
 }
 
-.modal__image-container {
-  max-width: 100rem;
-}
-
-.modal__image {
-  width: 100%;
-  height: 100%;
-}
 
 @include respond-to(tablet) {
 
