--- a/src/shared/ui/modal/modal.module.scss
+++ b/src/shared/ui/modal/modal.module.scss
@@ -1,3 +1,5 @@
+@import 'src/app/index';
+
 .modal {
   $this: &;
   position: fixed;
@@ -6,8 +8,6 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
   z-index: 100;
 
   &__overlay {
@@ -20,3 +20,7 @@
     z-index: -100;
   }
 }
+
+
+
+
