add is read message notification

--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -41,7 +41,7 @@
   --color-icon-secondary: #3390ec;
   --color-out-boubble: #eeffde;
   --color-out-font: #000000;
-  --color-in-boubble: #3d3c3c;
+  --color-in-boubble: #DEDEDE;
   --color-in-font: #000000;
   --color-link: #3390ec;
   --color-badge: #C4C9CCFF;
