--- a/src/entities/message/ui/message/message.module.scss
+++ b/src/entities/message/ui/message/message.module.scss
@@ -23,7 +23,9 @@
     position: relative;
     grid-template-rows: repeat(2, auto);
     column-gap: 10px;
-    background-color: #DEDEDE;
+    background-color: var(--color-in-boubble);
+    color: var(--color-out-font);
+    //background-color: #DEDEDE;
     padding: 10px 10px 3px;
     border-radius: 16px 16px 16px 0;
     z-index: 1;
@@ -38,7 +40,8 @@
       bottom: 0;
       border-style: solid;
       border-width: 0 0 25px 25px;
-      border-color: transparent transparent #DEDEDE transparent;
+      border-color: transparent transparent var(--color-in-boubble) transparent;
+      //border-color: transparent transparent #DEDEDE transparent;
       z-index: -1;
     }
   }
@@ -88,10 +91,14 @@
     }
 
     #{$this}__body {
-      background-color: #F7DEAD;
+      background-color: var(--color-out-boubble);
+      color: var(--color-out-font);
+      //background-color: #F7DEAD;
 
       &:before {
-        border-color: transparent transparent #F7DEAD transparent;
+        border-color: transparent transparent var(--color-out-boubble) transparent;
+
+        //border-color: transparent transparent #F7DEAD transparent;
       }
     }
 
@@ -111,8 +118,18 @@
       display: block;
 
       svg {
-        width: 1rem;
-        height: 1rem;
+        width: 1.188rem;
+        height: 1.188rem;
+        stroke: var(--color-icon-primary);
+      }
+
+    }
+
+    #{$this}__icon {
+      &--read {
+        svg {
+          stroke: var(--color-chat-selected);
+        }
       }
     }
   }
