--- a/src/entities/dialog/ui/dialog/dialog.module.scss
+++ b/src/entities/dialog/ui/dialog/dialog.module.scss
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns: fit-content(100%) 1fr fit-content(100%);
     grid-template-rows: repeat(2, fit-content(100%));
-    gap: 10px;
+    gap: 10px 15px;
     padding: 8px;
     align-items: center;
   }
