--- a/src/components/chat/chat.module.scss
+++ b/src/components/chat/chat.module.scss
@@ -7,9 +7,9 @@
   height: 100dvh;
   overflow: hidden;
 
-  &--close{
-    display: none;
-  }
+  //&--close{
+  //  display: none;
+  //}
 
   &__header {
     grid-row: 1 / 2;
