--- a/src/entities/message/ui/message/message.module.scss
+++ b/src/entities/message/ui/message/message.module.scss
@@ -175,13 +175,15 @@
 @include respond-to(desktop) {
   .message__avatar {
     display: block;
+    width: 2rem;
+    height: 2rem;
     grid-column: 1 /  2;
     border-radius: 50%;
     align-self: end;
 
     &-img {
-      width: 30px;
-      height: 30px;
+      width: 100%;
+      height: 100%;
     }
   }
 }
