--- a/src/shared/ui/avatar/avatar.module.scss
+++ b/src/shared/ui/avatar/avatar.module.scss
@@ -2,8 +2,8 @@
   position: relative;
   object-fit: cover;
   border-radius: 50%;
-  width: 55px;
-  height: 55px;
+  width: 100%;
+  height: 100%;
 
 
   &__img {
