--- a/src/app/styles/mixin.scss
+++ b/src/app/styles/mixin.scss
@@ -14,7 +14,6 @@
   bottom: $bottom;
 }
 
-
 @mixin chat-input-btn {
   width: 1.5rem;
   height: 1.5rem;
@@ -41,4 +40,50 @@
     stroke: var(--color-chat-selected);
   }
 }
+
+@mixin contact {
+  &:hover {
+    background-color: var(--color-chat-hover);
+    border-radius: 6px;
+  }
+
+
+  &__container {
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    width: 100%;
+    gap: 10px;
+    padding: 8px;
+  }
+
+  &__link {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+  }
+
+  &__avatar {
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+    width: 55px;
+    height: 55px;
+
+  }
+
+  &__name {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--color-primary-font)
+  }
+
+  &__last-visit {
+    grid-column: 2 / 3;
+    font-size: 13px;
+    color: var(--color-secondary-font);
+  }
+}
+
 
