add edit user profile

--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -49,7 +49,7 @@
 
 .dark-theme {
   --color-primary: #282828;
-  --color-primary-opacity: rgba(50,50,50);
+  --color-primary-opacity: rgba(50,50,50, 0.75);
   --color-search-input-bg: #363838;
   --color-chat-input-bg: #3d3c3c;
   --color-chat-bg: #2e2e2e;
