--- a/src/components/right-sidebar/details/details.module.scss
+++ b/src/components/right-sidebar/details/details.module.scss
@@ -20,8 +20,8 @@
   }
 
   &__title {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 18px;
+
   }
 
   &__contactlist {
@@ -122,6 +122,7 @@
         width: 35px;
         height: 35px;
         stroke: var(--color-icon-primary);
+        vertical-align: bottom;
       }
 
       &:hover {
@@ -156,8 +157,12 @@
       border-radius: 6px;
     }
 
+    &-delete-contact {
+      background-color: #EB455F;
+    }
+
     &-add-contact {
-      background-color: var(--color-chat-selected);
+      background-color: #6EBF8B;
       color: white;
     }
 
@@ -172,6 +177,7 @@
         width: 100%;
         height: 100%;
         stroke: var(--color-primary-font);
+        vertical-align: bottom;
       }
 
       &--visible {
