add voice message

--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -18,6 +18,8 @@
   --color-in-font: #000000;
   --color-link: #3390ec;
   --color-badge: #C4C9CCFF;
+  --color-danger: #EB455F;
+  --color-play-button: #efefef;
 
   //--color-primary-opacity: rgba(80,162,233,0.25098);
   //--color-primary-opacity-hover: rgba(80,162,233,0.14902);
@@ -45,6 +47,8 @@
   --color-in-font: #000000;
   --color-link: #3390ec;
   --color-badge: #C4C9CCFF;
+  --color-danger: #EB455F;
+  --color-play-button: #efefef;
 }
 
 .dark-theme {
@@ -66,4 +70,6 @@
   --color-in-font: #adadad;
   --color-link: #83a598;
   --color-badge: #999999;
+  --color-danger: #EB455F;
+  --color-play-button: #ebdbb2;
 }
