--- a/src/components/right-sidebar/details/details.module.scss
+++ b/src/components/right-sidebar/details/details.module.scss
@@ -158,7 +158,7 @@
     }
 
     &-delete-contact {
-      background-color: #EB455F;
+      background-color: var(--color-danger);
     }
 
     &-add-contact {
