--- a/src/components/chat/message-box/ui/send-button/send-btutton.module.scss
+++ b/src/components/chat/message-box/ui/send-button/send-btutton.module.scss
@@ -2,39 +2,51 @@
 
 .send {
   $this: &;
-  align-self: end;
+
+  width: 3.125rem;
+  height: 3.125rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-chat-selected);
+
   &__btn {
+    width: 100%;
+    height: 100%;
+    border-radius: 500%;
+    background-color: transparent;
+    border: none;
+  }
 
-    width: 3.125rem;
-    height: 3.125rem;
-    border-radius: 50%;
-    padding: 0.9rem;
-   border: none;
-    background-color: var(--color-chat-selected);
-    margin-bottom: 0.3125rem;
-
-    svg {
-      width: 100%;
-      height: 100%;
-      stroke: var(--color-primary);
-    }
+  svg {
+    width: 24px;
+    stroke: var(--color-primary);
+    vertical-align: bottom;
+    background-color: transparent;
   }
 }
 
 @include respond-to(desktop) {
   .send {
+    border: solid 1px var(--color-primary);
+    background-color: var(--color-primary);
+
+    &:hover {
+      background-color: var(--color-chat-selected);
+
+      svg {
+        stroke: var(--color-primary);
+      }
+    }
+
+
     &__btn {
-      border: solid 1px var(--color-primary);
-      background-color: var(--color-primary);
       svg {
         stroke: var(--color-icon-primary);
       }
-      &:hover {
-        background-color: var(--color-chat-selected);
-        svg {
-          stroke: var(--color-primary);
-        }
-      }
+
+
     }
 
   }
