--- a/src/entities/message/message.module.scss
+++ b/src/entities/message/message.module.scss
@@ -106,6 +106,10 @@
       transform: scaleX(-1);
     }
 
+    #{$this}__voice {
+      transform: scaleX(-1);
+    }
+
     #{$this}__text, #{$this}__info {
       transform: scaleX(-1);
     }
