--- a/src/components/left-sidebar/dialogs/dilogs.module.scss
+++ b/src/components/left-sidebar/dialogs/dilogs.module.scss
@@ -1,7 +1,11 @@
 @import 'src/app/index';
 
 .dialogs {
-height: 100%;
+  height: 100vh;
+  overflow-y: auto;
+  list-style: none;
+
+
   &__preloader {
     @include preloader();
 
